--- a/application/homeapi/view/integral_mall/integral_mall_list.html
+++ b/application/homeapi/view/integral_mall/integral_mall_list.html
@@ -5,7 +5,7 @@
       <div class="container">
         <!--三大栏目-->
         {include file="public/three_box" /}
-        <section class="section-block">
+        <section class="section-block pb-5">
           <div class="section-title clearfix">
             <h1>积分兑换<span class="section-subtitle">免费兑换 | 送货上门</span></h1>
           </div>
@@ -80,276 +80,13 @@
             </div>
             {/foreach}
           </div>
-          <div class="text-center pb-5 pt-3">
-            <nav aria-label="navigation pagination-box">
-              <ul class="pagination justify-content-center">
-                <li class="page-item"><a class="page-link icon-link icon-prev " href="#"></a></li>
-                <li class="page-item"><a class="page-link active" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                <li class="page-item"><a class="page-link icon-link icon-next" href="#"></a></li>
-                <li class="page-item page-extra">
-                  &nbsp;
-                  <select name="" id="">
-                    <option value="">10条/页</option>
-                  </select>
-                  &nbsp;
-                  <span>跳至</span>
-                  <input value="5" class="form-control form-control-sm d-inline" /><span>&nbsp;页</span>
-                </li>
-              </ul>
-            </nav>
-          </div>
+          {php} 
+            $total = sizeof($data);
+          {/php}
+          {include file="public/pagination" total="$total" size="9" /}
         </section>
 
       </div>
 
     </main>
-    <footer class="o-wrapper c-footer">
-      <div class="container">
-        <div class="row c-footer-links">
-          <div class="col">
-            <h5>品牌天地</h5>
-            <ul>
-              <li><a href="#">集团概述</a></li>
-              <li><a href="#">新闻资讯</a></li>
-              <li><a href="#">技术品牌</a></li>
-              <li><a href="#">企业文化</a></li>
-              <li><a href="#">吉利教育</a></li>
-              <li><a href="#">社会责任</a></li>
-            </ul>
-          </div>
-          <div class="col">
-            <h5>热门车型</h5>
-            <ul>
-              <li><a href="#">众泰T700</a></li>
-              <li><a href="#">众泰T600</a></li>
-              <li><a href="#">众泰Z300</a></li>
-              <li><a href="#">众泰Z700</a></li>
-              <li><a href="#">众泰T700</a></li>
-              <li><a href="#">众泰T700</a></li>
-            </ul>
-          </div>
-          <div class="col">
-            <h5>购车支持</h5>
-            <ul>
-              <li><a href="#">集团概述</a></li>
-              <li><a href="#">新闻资讯</a></li>
-              <li><a href="#">技术品牌</a></li>
-              <li><a href="#">企业文化</a></li>
-              <li><a href="#">吉利教育</a></li>
-              <li><a href="#">社会责任</a></li>
-            </ul>
-          </div>
-          <div class="col">
-            <h5>车主服务</h5>
-            <ul>
-              <li><a href="#">集团概述</a></li>
-              <li><a href="#">新闻资讯</a></li>
-              <li><a href="#">技术品牌</a></li>
-              <li><a href="#">企业文化</a></li>
-              <li><a href="#">吉利教育</a></li>
-              <li><a href="#">社会责任</a></li>
-            </ul>
-          </div>
-          <div class="col">
-            <h5>商务合作</h5>
-            <ul>
-              <li><a href="#">集团概述</a></li>
-              <li><a href="#">新闻资讯</a></li>
-              <li><a href="#">技术品牌</a></li>
-              <li><a href="#">企业文化</a></li>
-              <li><a href="#">吉利教育</a></li>
-              <li><a href="#">社会责任</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="copyright text-center">Copyright &copy; 2018 www.zhongtia.com All Rights Reserved</div>
-    </footer>
-
-    <div class="side-btns">
-      <div class="side-btns-item">
-        <div class="side-btns-item__inner">
-          <img src="assets/images/common/icon-kefu.png" alt="">
-          <p>客服咨询</p>
-        </div>
-
-      </div>
-
-      <div class="side-btns-item" data-toggle="modal" data-target="#testDriveForm">
-        <div class="side-btns-item__inner">
-          <img src="assets/images/common/icon-test-drive.png" alt="">
-          <p>预约试驾</p>
-        </div>
-      </div>
-
-      <div class="side-btns-item">
-        <div class="side-btns-item__inner">
-          <img src="assets/images/common/icon-map.png" alt="">
-          <p>销售网点</p>
-        </div>
-      </div>
-
-      <div class="side-btns-item">
-        <div class="side-btns-item__inner">
-          <img src="assets/images/common/icon-kefu.png" alt="">
-          <p>公众号</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="modal fade" id="testDriveForm" tabindex="-1" role="dialog" aria-labelledby="testDriveFormTitle" aria-hidden="true">
-      <div class="modal-dialog pop-up" role="document">
-        <div class="modal-content">
-          <div class="pop-up-box">
-            <div class="pop-up-title text-center">
-              <span class="navbar-brand navbar-brand__white"></span><span>预约试驾</span>
-
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <img src="assets/images/common/icon-close.png" alt="">
-              </button>
-            </div>
-            <div class="pop-up-content">
-              <div class="form-group row">
-                <label class="col-sm-2 col-form-label font-weight-bold"><img width="18" class="row-icon" src="assets/images/common/icon-clock.png" />预约试驾：</label>
-                <div class="col-sm-10 color-read">
-                  欢迎您在线预约试驾，众泰很重视您所提交的一切信息，这将令我们更了解您的需求和喜好，并为您提供更好的驾乘体验。
-                </div>
-              </div>
-              <div class="form-group row">
-                <label class="col-sm-2 col-form-label">选择车型：</label>
-                <div class="col-sm-10">
-                  <div class="w130">
-                    <select class="selectpicker form-control form-control-sm" data-style="my-select">
-                      <option>2018</option>
-                      <option>2017</option>
-                      <option>2016</option>
-                    </select>
-                  </div>
-                  <div class="form-mini">
-                    <div class="form-item">
-                      <span class="item-label">选择经销商：</span>
-                      <div class="w80">
-                        <select class="selectpicker form-control form-control-sm" data-style="my-select">
-                          <option>2018</option>
-                          <option>2017</option>
-                          <option>2016</option>
-                        </select>
-                      </div>
-                      <span class="item-des">省</span>
-                    </div>
-                    <div class="form-item">
-                      <div class="w80">
-                        <select class="selectpicker form-control form-control-sm" data-style="my-select">
-                          <option>2018</option>
-                          <option>2017</option>
-                          <option>2016</option>
-                        </select>
-                      </div>
-                      <span class="item-des">市</span>
-                    </div>
-                    <div class="form-item">
-                      <div class="w130">
-                        <select class="selectpicker form-control form-control-sm" data-style="my-select">
-                          <option>2018</option>
-                          <option>2017</option>
-                          <option>2016</option>
-                        </select>
-                      </div>
-                      <span class="item-des">经销商</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <hr>
-              <div class="form-group row">
-                <label class="col-sm-2 col-form-label font-weight-bold"><img width="18" class="row-icon" src="assets/images/common/icon-user.png" />个人信息：</label>
-                <div class="col-sm-10 color-read">
-                  （*为必填选项，请确保输入信息无误。）
-                </div>
-              </div>
-              <div class="pop-up-form">
-                <div class="pop-up-form__inner">
-                  <h6 class="text-center pb-3 font-weight-bold">信息填写</h6>
-                  <div class="form-group row">
-                    <label class="col-sm-3 text-right col-form-label">姓名：</label>
-                    <div class="col-sm-9">
-                      <input type="text" class="form-control form-control-sm">
-                    </div>
-                  </div>
-                  <div class="form-group row">
-                    <label class="col-sm-3 text-right col-form-label">性别：</label>
-                    <div class="col-sm-9">
-                      <div class="form-check form-check-inline">
-                        <label for=""><input class="form-check-input" type="radio" name="exampleRadios" value="option1" checked>男</label>
-                      </div>
-                      <div class="form-check form-check-inline">
-                        <label for=""><input class="form-check-input" type="radio" name="exampleRadios" value="option2">女</label>
-                      </div>
-
-                    </div>
-                  </div>
-                  <div class="form-group row">
-                    <label class="col-sm-3 text-right col-form-label">手机号：</label>
-                    <div class="col-sm-9">
-                      <input type="text" class="form-control form-control-sm">
-                    </div>
-                  </div>
-                  <div class="form-group row">
-                    <label class="col-sm-3 text-right col-form-label">日期选择：</label>
-                    <div class="col-sm-9">
-                      <div class="form-mini">
-                        <div class="form-item" style="margin-right: 73px">
-                          <div class="w80">
-                            <select class="selectpicker form-control form-control-sm" data-style="my-select">
-                              <option>2018</option>
-                              <option>2017</option>
-                              <option>2016</option>
-                            </select>
-                          </div>
-                          <span class="item-des">月</span>
-                        </div>
-                        <div class="form-item">
-                          <div class="w80">
-                            <select class="selectpicker form-control form-control-sm" data-style="my-select">
-                              <option>2018</option>
-                              <option>2017</option>
-                              <option>2016</option>
-                            </select>
-                          </div>
-                          <span class="item-des">日</span>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="form-group row">
-                    <label class="col-sm-3 text-right col-form-label">时间选择：</label>
-                    <div class="col-sm-9">
-                      <div class="form-mini">
-                        <div class="form-item">
-                          <div class="w80">
-                            <select class="selectpicker form-control form-control-sm" data-style="my-select">
-                              <option>2018</option>
-                              <option>2017</option>
-                              <option>2016</option>
-                            </select>
-                          </div>
-                          <span class="item-des">时</span>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="text-center pt-3 pb-3">
-                    <a href="#" class="btn btn-danger btn-lg btn-block">立即预约</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </body>
-</html>
+    {include file="public/footer" /}
