--- a/application/homeapi/view/public/car-type-filter.html
+++ b/application/homeapi/view/public/car-type-filter.html
@@ -12,7 +12,6 @@
     <div class="type-filter-row">
       <label>{$data['name']}:</label>
       <ul class="filter" id="type-filter">
-        
         {foreach $data['list'] as $list}
         <li class="{$Think.get.cat_id == $list['id'] ? 'active' : ''}"><a href="__URL__/brand_models.html?cat_id={$list['id']}">{$list['name']}</a></li>
         {/foreach}
@@ -22,22 +21,22 @@
     <div class="type-filter-row">
       <label>分类默认:</label>
       <ul class="filter">
-        <li class="active"><a href="" ></a>默认</a></li>
-        <li>
+        <li {if !$Think.get.sales_num && !$Think.get.price} class="active" {/if}><a href="__URL__/brand_models.html" >默认</a></li>
+        <li {if $Think.get.sales_num } class="active" {/if}>
           <div class="sort-wrapper">
-            <span class="sort-txt">销量</span>
+            <span class="sort-txt"><a href="__URL__/brand_models.html?sales_num={$Think.get.sales_num == 'asc' ? 'desc' : 'asc'}">销量</a></span>
             <div class="lamp">
-              <div class="icon-arr icon-arr__up"></div>
-              <div class="icon-arr icon-arr__down"></div>
+              <div class="icon-arr icon-arr__up {$Think.get.sales_num == 'asc' ? 'active' : ''}"></div>
+              <div class="icon-arr icon-arr__down {$Think.get.sales_num == 'desc' ? 'active' : ''}"" ></div>
             </div>
           </div>
         </li>
-        <li>
+        <li {if $Think.get.price} class="active" {/if}>
           <div class="sort-wrapper">
-            <span class="sort-txt">价格</span>
+            <span class="sort-txt"><a href="__URL__/brand_models.html?price={$Think.get.price == 'asc' ? 'desc' : 'asc'}">价格</a></span>
             <div class="lamp">
-              <div class="icon-arr icon-arr__up"></div>
-              <div class="icon-arr icon-arr__down"></div>
+              <div class="icon-arr icon-arr__up {$Think.get.price == 'asc' ? 'active' : ''}"></div>
+              <div class="icon-arr icon-arr__down {$Think.get.price == 'desc' ? 'active' : ''}"" ></div>
             </div>
           </div>
         </li>
