--- a/application/homeapi/view/public/header-nav.html
+++ b/application/homeapi/view/public/header-nav.html
@@ -36,7 +36,7 @@
           data-toggle="modal" data-target="#loginModal" 
           href="javascript:void(0)" 
         {else/}
-          href="../index/user_center.html"
+          href="../index/user_center.html?order_type=1"
         {/if}
         >个人中心</a></li>
       <li>
