--- a/application/homeapi/view/brand_models/brand_models.html
+++ b/application/homeapi/view/brand_models/brand_models.html
@@ -48,10 +48,12 @@
     $.ajax(newUrl, {
       type: 'POST',
       success: function(data) {
-        console.log()
+        console.log(data)
       }
     })
   }
+
+  getList(1)
 </script>
 
 {include file="public/footer" /}
