--- a/application/homeapi/view/integral_mall/integral_mall_exchange.html
+++ b/application/homeapi/view/integral_mall/integral_mall_exchange.html
@@ -48,7 +48,7 @@
                     <div class="form-item-control">
                       <ul class="product-attr-color" id="product-color">
                         {foreach $data['spec'] as $item}
-                        <li class="attr-color__item active">
+                        <li class="attr-color__item">
                           <div class="pic-wrapper">
                             <img src="{$item.sku_img}" class="color-pic" alt="">
                             <img src="" class="selected-icon" alt="">
@@ -167,7 +167,7 @@
                     </div>
                   </form>
                   <div class="actions">
-                    <a class="c-btn c-btn__primary exchange-btn" href="#">立即兑换（300积分）</a>
+                    <a class="c-btn c-btn__primary exchange-btn" {if $is_login } onclick="commitOrder()" {else /} data-toggle="modal" data-target="#loginModal"  {/if} href="javascript:void(0)">立即兑换（300积分）</a>
                   </div>
                 </div>
 
@@ -179,68 +179,4 @@
       </div>
 
     </main>
-    <footer class="o-wrapper c-footer">
-      <div class="container">
-        <div class="row c-footer-links">
-          <div class="col">
-            <h5>品牌天地</h5>
-            <ul>
-              <li><a href="#">集团概述</a></li>
-              <li><a href="#">新闻资讯</a></li>
-              <li><a href="#">技术品牌</a></li>
-              <li><a href="#">企业文化</a></li>
-              <li><a href="#">吉利教育</a></li>
-              <li><a href="#">社会责任</a></li>
-            </ul>
-          </div>
-          <div class="col">
-            <h5>热门车型</h5>
-            <ul>
-              <li><a href="#">众泰T700</a></li>
-              <li><a href="#">众泰T600</a></li>
-              <li><a href="#">众泰Z300</a></li>
-              <li><a href="#">众泰Z700</a></li>
-              <li><a href="#">众泰T700</a></li>
-              <li><a href="#">众泰T700</a></li>
-            </ul>
-          </div>
-          <div class="col">
-            <h5>购车支持</h5>
-            <ul>
-              <li><a href="#">集团概述</a></li>
-              <li><a href="#">新闻资讯</a></li>
-              <li><a href="#">技术品牌</a></li>
-              <li><a href="#">企业文化</a></li>
-              <li><a href="#">吉利教育</a></li>
-              <li><a href="#">社会责任</a></li>
-            </ul>
-          </div>
-          <div class="col">
-            <h5>车主服务</h5>
-            <ul>
-              <li><a href="#">集团概述</a></li>
-              <li><a href="#">新闻资讯</a></li>
-              <li><a href="#">技术品牌</a></li>
-              <li><a href="#">企业文化</a></li>
-              <li><a href="#">吉利教育</a></li>
-              <li><a href="#">社会责任</a></li>
-            </ul>
-          </div>
-          <div class="col">
-            <h5>商务合作</h5>
-            <ul>
-              <li><a href="#">集团概述</a></li>
-              <li><a href="#">新闻资讯</a></li>
-              <li><a href="#">技术品牌</a></li>
-              <li><a href="#">企业文化</a></li>
-              <li><a href="#">吉利教育</a></li>
-              <li><a href="#">社会责任</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="copyright text-center">Copyright &copy; 2018 www.zhongtia.com All Rights Reserved</div>
-    </footer>
-
-  </body>
-</html>
+    {include file="public/footer" /}
