--- a/application/homeapi/view/public/footer.html
+++ b/application/homeapi/view/public/footer.html
@@ -56,9 +56,9 @@
   <div class="copyright text-center">Copyright &copy; 2018 www.zhongtia.com All Rights Reserved</div>
 </footer>
 
-<script src="__STATIC__/scripts/common.bundle.js"></script>
+<script src="__STATIC__/scripts/common.bundle.js?v=20181226"></script>
 {defined name="bundle"} 
-  <script src="__STATIC__/scripts/[bundle].bundle.js"></script>
+  <script src="__STATIC__/scripts/[bundle].bundle.js?v=20181226"></script>
 {/defined}
 <script>
   function getProvince(cb) {
