--- a/application/homeapi/view/public/header.html
+++ b/application/homeapi/view/public/header.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <title>[title] - 众泰商城</title>
-  <link rel="stylesheet" property="stylesheet" href="__STATIC__/styles/main.css" type="text/css">
+  <link rel="stylesheet" property="stylesheet" href="__STATIC__/styles/main.css?v=20181226" type="text/css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script>document.querySelector('html').classList.remove('no-js');</script>
   <script src="__STATIC__/scripts/vendor.js"></script>
