--- a/application/homeapi/view/common/search.html
+++ b/application/homeapi/view/common/search.html
@@ -9,22 +9,22 @@
           <div class="type-filter-row">
             <label>分类默认:</label>
             <ul class="filter">
-              <li class="active"><a href=""></a>默认</a></li>
-              <li>
+              <li {if !$Think.get.sales_sum && !$Think.get.price} class="active" {/if}><a href="__URL__/searchList?title={$Think.get.title}" >默认</a></li>
+              <li {if $Think.get.sales_sum } class="active" {/if}>
                 <div class="sort-wrapper">
-                  <span class="sort-txt">销量</span>
+                  <span class="sort-txt"><a href="__URL__/searchList?title={$Think.get.title}&sales_sum={$Think.get.sales_sum == 'asc' ? 'desc' : 'asc'}">销量</a></span>
                   <div class="lamp">
-                    <div class="icon-arr icon-arr__up"></div>
-                    <div class="icon-arr icon-arr__down"></div>
+                    <div class="icon-arr icon-arr__up {$Think.get.sales_sum == 'asc' ? 'active' : ''}"></div>
+                    <div class="icon-arr icon-arr__down {$Think.get.sales_sum == 'desc' ? 'active' : ''}"" ></div>
                   </div>
                 </div>
               </li>
-              <li>
+              <li {if $Think.get.price} class="active" {/if}>
                 <div class="sort-wrapper">
-                  <span class="sort-txt">价格</span>
+                  <span class="sort-txt"><a href="__URL__/searchList?title={$Think.get.title}&price={$Think.get.price == 'asc' ? 'desc' : 'asc'}">价格</a></span>
                   <div class="lamp">
-                    <div class="icon-arr icon-arr__up"></div>
-                    <div class="icon-arr icon-arr__down"></div>
+                    <div class="icon-arr icon-arr__up {$Think.get.price == 'asc' ? 'active' : ''}"></div>
+                    <div class="icon-arr icon-arr__down {$Think.get.price == 'desc' ? 'active' : ''}"" ></div>
                   </div>
                 </div>
               </li>
@@ -37,7 +37,7 @@
           <div class="col col-4">
             <div class="product-card">
               <div class="product-card-img">
-                <a href="__URL__/brand_models_detail.html?goods_id={$data.goods_id}"><img src="{$data['original_img']}" alt=""></a>
+                <a href="../index/brand_models_detail.html?goods_id={$data.goods_id}"><img src="{$data['original_img']}" alt=""></a>
               </div>
               <div class="product-card-content">
                 <h2 class="product-card-title">
