--- a/application/homeapi/view/index/top_auction.html
+++ b/application/homeapi/view/index/top_auction.html
@@ -18,7 +18,7 @@
             <div class="product-card-content">
               <div class="product-card-title product-card-title__price">
                 {$vo.goods_name}
-                <span class="float-right"><strong>{$vo.start_price/ 10000}</strong>万元</span>
+                <span class="float-right color-primary"><strong>{$vo.start_price/ 10000}</strong>万元</span>
               </div>
               <div class="product-card-intro"><strong>特点：</strong>{$vo.goods_remark}
               </div>
