--- a/application/homeapi/view/public/header-nav.html
+++ b/application/homeapi/view/public/header-nav.html
@@ -1,6 +1,6 @@
 <header class="o-wrapper c-header {php} echo [hasBanner] ? 'c-header__fixed' : '' {/php}" >
   <div class="container clearfix">
-    <a class="navbar-brand" href="__URL__/home.html">
+    <a class="navbar-brand" href="../index/home.html">
       众泰汽车
     </a>
     <div class="select-city__wrapper">
