--- a/application/homeapi/view/public/parts-type-filter.html
+++ b/application/homeapi/view/public/parts-type-filter.html
@@ -21,13 +21,13 @@
     <div class="type-filter-row">
       <label>分类默认:</label>
       <ul class="filter">
-        <li {if !$Think.get.sales_num && !$Think.get.price} class="active" {/if}><a href="__URL__/parts.html" >默认</a></li>
-        <li {if $Think.get.sales_num } class="active" {/if}>
+        <li {if !$Think.get.sales_sum && !$Think.get.price} class="active" {/if}><a href="__URL__/parts.html" >默认</a></li>
+        <li {if $Think.get.sales_sum } class="active" {/if}>
           <div class="sort-wrapper">
-            <span class="sort-txt"><a href="__URL__/parts.html?sales_num={$Think.get.sales_num == 'asc' ? 'desc' : 'asc'}">销量</a></span>
+            <span class="sort-txt"><a href="__URL__/parts.html?sales_sum={$Think.get.sales_sum == 'asc' ? 'desc' : 'asc'}">销量</a></span>
             <div class="lamp">
-              <div class="icon-arr icon-arr__up {$Think.get.sales_num == 'asc' ? 'active' : ''}"></div>
-              <div class="icon-arr icon-arr__down {$Think.get.sales_num == 'desc' ? 'active' : ''}"" ></div>
+              <div class="icon-arr icon-arr__up {$Think.get.sales_sum == 'asc' ? 'active' : ''}"></div>
+              <div class="icon-arr icon-arr__down {$Think.get.sales_sum == 'desc' ? 'active' : ''}"" ></div>
             </div>
           </div>
         </li>
